[build-system]
#requires = ["wheel", "setuptools", "setuptools_scm"]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "edman"
description = "KEK IMSS SBRC/PF Experimental Data Management System"
authors = [
    {name = "Masaki Ohno", email = "masakio@post.kek.jp"},
]
readme = "README.rst"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "pymongo~=4.6.0",
    "python-dateutil~=2.8.2",
    "jmespath~=1.0.1",
]
version = "2023.11.29"
# dynamic = ["version"]

[project.urls]
"documentation" = "https://ryde.github.io/edman/"
"repository" = "https://github.com/ryde/edman"

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
edman = ["py.typed"]

#[tool.setuptools_scm]
#write_to = "edman/_version.py"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]