[metadata]
name = edman
version = 0.2.8
author = Masaki Ohno
author_email = masakio@post.kek.jp
license = MIT License
description = KEK IMSS SBRC/PF Experimental Data Management System
url = https://github.com/yuskyamada/EDMAN
long_description = file: README.rst
classifier =
    License :: OSI Approved :: MIT License
    Topic :: Database :: Front-Ends
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    pymongo>=3.12
    python-dateutil>=2.8.2
    jmespath>=0.10.0
    tqdm>=4.62.2

[options.packages.find]
exclude =
    tests