[metadata]
name = edman
version = 0.2.9.1
author = Masaki Ohno
author_email = masakio@post.kek.jp
license = MIT License
description = KEK IMSS SBRC/PF Experimental Data Management System
url = https://github.com/yuskyamada/EDMAN
long_description = file: README.rst
classifier =
    License :: OSI Approved :: MIT License
    Topic :: Database :: Front-Ends
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    pymongo>=4.0.1
    python-dateutil>=2.8.2
    jmespath>=0.10.0
    tqdm>=4.62.3

[options.packages.find]
exclude =
    tests